# protein_hunter_mcp

./: .gitmodules  MCP_USAGE.md  README.md  main.py  mcp-config-server.json  mcp-config.json  postinstall.py  pyproject.toml  pytest.ini
docs/: MIGRATION.md  PROTEIN_SEQUENCES.md
examples/: test_resources.py
src/protein_hunter_mcp/: __init__.py  boltz.py  chai.py  example_sequences.py  server.py  shared_lock.py
test/: __init__.py  test_server.py
